posts/1904/1904211429.txt
>>> 01234
  File "<stdin>", line 1
    01234
        ^
SyntaxError: invalid token
>>> (0b1111, 0o17, 0xF)
(15, 15, 15)
>>> 4/3
1.3333333333333333
>>> 4//3
1
>>> divmod(4,3)
(1, 1)
>>> 2**4
16
>>> 17**17
827240261886336764177
>>> int(123)
123
>>> int('123')
123
>>> int(1.23)
1
>>> int('1.23')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: '1.23'
>>> int(True)
1
>>> int(False)
0
>>>
>>> int('0xFF', 16)
255
>>> int('100', 15)
225
>>> int('100', 100)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: int() base must be >= 2 and <= 36, or 0